<resources>
    <string name="app_name">Storm Scouter Radar 2015-16</string>
    <string name="teamName">Team Number</string>
    <string name="matchNum">Match Number</string>
    <string name="red">Red</string>
    <string name="blue">Blue</string>
    <string name="begin">Begin Match</string>
    <string name="gen">Generate QR code</string>
    <string name="tweet">Twitter: @stormroboticsnj</string>
    <string name="website">Website: www.stormrobticsnj.org</string>
    <string name="git">Github: 2729StormRobotics</string>
    <string name="facebook">Facebook: frc2729ftc4390</string>
    <string name="storm">Storm Robotics</string>
    <string name="title_activity_match">MatchActivity</string>
    <string name="action_settings">Settings</string>
    <string name="exit">Return to Main Screen</string>
    <string-array name="autoDefenses">
        <item name="ptc">Portcullis</item>
        <item name="cdf">Cheval de Frise</item>
        <item name="rmp">Ramparts</item>
        <item name="mt">Moat</item>
        <item name="db">DrawBridge</item>
        <item name="sp">Sally Port</item>
        <item name="rw">Rock Wall</item>
        <item name="rt">Rough Terrain</item>
        <item name="lb">Low Bar</item>
        <item name="na">None(Spy position)</item>
    </string-array>
    <string-array name="defenses">
        <item>Select</item>
        <item name="ptc">Portcullis</item>
        <item name="cdf">Cheval de Frise</item>
        <item name="rmp">Ramparts</item>
        <item name="mt">Moat</item>
        <item name="db">DrawBridge</item>
        <item name="sp">Sally Port</item>
        <item name="rw">Rock Wall</item>
        <item name="rt">Rough Terrain</item>
    </string-array>
    <string-array name="low">
        <item name="lb">Low Bar</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
